
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dumpbuff {char* tab; } ;
typedef int FILE ;


 int SEEK_SET ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fseek (int *,long,int ) ;
 int fwrite (struct dumpbuff*,int,int,int *) ;
 int printf (char*) ;

int clear_bios_pwd (void)
{

FILE *f;
struct dumpbuff b;
int i;
long j=1054;

for (i=0;i<32;i++)
{
b.tab[i]=' ';
}

f=fopen("/dev/mem","r+");
fseek(f,j,SEEK_SET);

fwrite (&b, sizeof(struct dumpbuff),1,f);
fclose(f);
printf("\n[Buffer Cleared]\n");
return 0;
}
